--- a/css/MultiSelect.css
+++ b/css/MultiSelect.css
@@ -34,7 +34,7 @@
   display: flex;
 }
 .multi-select .multi-select-header .multi-select-header-placeholder {
-  color: #65727e;
+  color: #000000;
 }
 .multi-select .multi-select-header .multi-select-header-option {
   display: inline-flex;
