--- a/css/MultiSelect.css
+++ b/css/MultiSelect.css
@@ -144,6 +144,7 @@
     position: relative;
     width: 100%;
     user-select: none;
+    margin-bottom: 10px;
 }
 .multi-select .multi-select-header {
     border: 1px solid #ccc;
