--- a/css/MultiSelect.css
+++ b/css/MultiSelect.css
@@ -40,10 +40,10 @@
     content: attr(data-label);
     position: absolute;
     top: 50%;
-    left: 1.5rem;
-    right: 1.5rem;
+    left: 0;
+    right: 0;
     transform: translateY(-50%);
-    padding-right: 80px;
+    padding: 0 100px 0 1.5rem;
     white-space: pre-wrap;
     text-align: center;
     z-index: 0;
@@ -55,7 +55,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 2;
+    z-index: 0;
     width: 100%;
     height: 100%;
     opacity: 0;
