--- a/css/MultiSelect.css
+++ b/css/MultiSelect.css
@@ -1,5 +1,5 @@
 .custom-file-label {
-    padding: 1.5rem;
+    padding: 0 calc(100px + 1.5rem) 0 1.5rem;
     cursor: pointer;
     border: 2px dashed #ced4da;
     border-radius: 5px;
@@ -146,6 +146,7 @@
     cursor: pointer;
     border-radius: 5px;
     min-height: 45px;
+    background-color: transparent;
 }
 
 .multi-select {
