--- a/css/MultiSelect.css
+++ b/css/MultiSelect.css
@@ -1,5 +1,101 @@
+.hidden {
+  display: none;
+}
+
+.file-drag-area {
+  height: 120px;
+  border: 2px dashed #ced4da;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-bottom: 1rem;
+  cursor: pointer;
+  transition: border-color 0.3s ease;
+  padding: 30px;
+}
+
+.file-drag-area:hover {
+  border-color: #7f56d9;
+}
+
+.file-drag-area .icon {
+  font-size: 50px;
+  color: #7f56d9;
+}
+
+.file-drag-area .header {
+  font-size: 20px;
+  font-weight: 500;
+  color: #34495e;
+}
+
+.file-drag-area .support {
+  font-size: 12px;
+  color: gray;
+}
+
+.file-drag-area .button {
+  font-size: 20px;
+  font-weight: 500;
+  color: #7f56d9;
+  cursor: pointer;
+}
+
+
+.file-drag-area embed {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.context-drag-area {
+  height: 120px;
+  border: 2px dashed #ced4da;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-bottom: 1rem;
+  cursor: pointer;
+  transition: border-color 0.3s ease;
+  padding: 30px;
+}
+
+.context-drag-area:hover {
+  border-color: #7f56d9;
+}
+
+.context-drag-area .icon {
+  font-size: 50px;
+  color: #7f56d9;
+}
+
+.context-drag-area .header {
+  font-size: 20px;
+  font-weight: 500;
+  color: #34495e;
+}
+
+.context-drag-area .support {
+  font-size: 12px;
+  color: gray;
+}
+
+.context-drag-area .button {
+  font-size: 20px;
+  font-weight: 500;
+  color: #7f56d9;
+  cursor: pointer;
+}
+
+.context-drag-area embed {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
 .custom-file-label {
-    padding: 0 calc(100px + 1.5rem) 0 1.5rem;
     cursor: pointer;
     border: 2px dashed #ced4da;
     border-radius: 5px;
@@ -65,7 +161,7 @@
 .file-upload-container {
     margin-bottom: .5rem;
     min-height: 120px;
-    position: relative; /* This ensures z-index works */
+    position: relative;
     z-index: 0;
 }
 
