--- a/css/MultiSelect.css
+++ b/css/MultiSelect.css
@@ -35,7 +35,7 @@
   color: gray;
 }
 
-.file-drag-area .button {
+.file-drag-area .button1 {
   font-size: 20px;
   font-weight: 500;
   color: #7f56d9;
@@ -82,7 +82,7 @@
   color: gray;
 }
 
-.context-drag-area .button {
+.context-drag-area .button1 {
   font-size: 20px;
   font-weight: 500;
   color: #7f56d9;
