--- a/css/MultiSelect.css
+++ b/css/MultiSelect.css
@@ -408,6 +408,7 @@
     position: relative;
     user-select: none;
     width: 100%;
+    margin-bottom: 10px;
 }
 .single-select-header {
     position: relative;
